# bank_operations

./: .env_template  .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_main_py.html  z_145eef247bfb46b6_reports_py.html  z_145eef247bfb46b6_services_py.html  z_145eef247bfb46b6_utils_py.html  z_145eef247bfb46b6_views_py.html  z_a44f0ac069e85531___init___py.html  z_a44f0ac069e85531_conftests_py.html  z_a44f0ac069e85531_test_main_py.html  z_a44f0ac069e85531_test_reports_py.html  z_a44f0ac069e85531_test_services_py.html  z_a44f0ac069e85531_test_utils_py.html  z_a44f0ac069e85531_test_views_py.html
src/: main.py  reports.py  services.py  utils.py  views.py
tests/: conftests.py  test_main.py  test_reports.py  test_services.py  test_utils.py  test_views.py
