[project]
name = "test-poetry"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.14"
dependencies = [
    "requests (>=2.32.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
lint = [
    "flake8 (>=7.3.0,<8.0.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "black (>=26.1.0,<27.0.0)",
    "isort (>=7.0.0,<8.0.0)"
]
dev = [
    "black (>=26.1.0,<27.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "flake8 (>=7.3.0,<8.0.0)"
]
[tool.flake8]
max-line-length = 119
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", ".tox", ".venv", "build", "dist"]

[tool.mypy]
mypy_path = "src"
disallow_untyped_defs = true
warn_return_any = true
strict_optional = true
check_untyped_defs = true
no_implicit_reexport = true
ignore_missing_imports = true

[tool.black]
line-length = 119

[tool.isort]
profile = "black"
line_length = 119
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
src_paths = ["src", "tests"]
skip_gitignore = true
force_single_line = true
